pushing about updates
customized for desktop and mobile

--- a/about.html
+++ b/about.html
@@ -118,69 +118,41 @@
   <!-- About Section -->
   <section id="about pt-0 mt-0">
 
-    <div class="center pt-4">
-      <img class="img-fluid pt-5 pl-3 pr-3" src="img/han.png">
+    <div class="center pt-5 mt-5 text-center">
+      <img class="col-sm-6 img-fluid rounded-circle" src="img/han-about.png">
     </div>
     <!-- About Img Desktop new -->
 
-    <div class="container">
-      <div class="row center">
-        <div class="container pt-0">
-          <div class="row pt-5">
-            <div class="col-sm-6">
-              <h1 class="text-left font-weight-light" style="font-size: 60px; line-height: 64px;"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">design</span>, <span class="intro-2" style="font-weight:800;">illustrate</span><br> & <span class="intro-3" style="font-weight:800;">code</span>.</h1>
-            </div>
-            <div class="col-sm-6 pb-3">
-              <p><span style="font-weight: 500;">I’m <span class="intro-0">Hannah Hatherell</span>, an experienced designer based in Ottawa, Ontario.</span><br><br> I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions.<br><br>Most recently, as Graphic Designer and Developer at Euna Solutions, I applied UX principles to craft top-tier marketing
-                collateral tailored for SaaS solutions.</p>
-              <ul class="list-inline mb-3">
-                <li class="list-inline-item">
-                  <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
-                </li>
-                <li class="list-inline-item">
-                  <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
-                      </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                        <i class="fas fa-envelope"></i>
-                      </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+    <div class="container pb-5">
+      <div class="row center text-center">
+        <img class="img-fluid col-sm-7 mx-auto" src="img/about.gif" alt="">
+        <p><span style="font-weight: 500;">I’m <span class="intro-0">Hannah Hatherell</span>, an experienced designer based in Ottawa, Ontario.</span><br><br> I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions.<br><br>Most recently, as Graphic Designer and Developer at Euna Solutions, I applied UX principles to craft top-tier brand and marketing collateral tailored for Software as a Service Solutions.</p>
+        <ul class="list-inline mb-3 mx-auto">
+          <li class="list-inline-item">
+            <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                  <i class="fas fa-envelope"></i>
+                </a>
+          </li>
+        </ul>
       </div>
     </div>
-  </section>
 
-  <div class="bb"></div>
 
-  <div class="container pb-5 mb-3">
-    <div class="row center">
-      <div class="container pt-0">
-        <div class="row pt-5">
-          <div class="col-sm-6">
-            <img class="ixdf-desktop w-50 pr-5 pb-2" src="img/ixdf.png" alt="">
-            <img class="ixdf-mobile w-50 pb-2" src="img/ixdf.png" alt="">
-            <h5 class="text-left font-weight-light"><span style="font-weight: 500; font-size: 20px; letter-spacing: .2px;">CERTIFICATIONS</h5>
-          </div>
-          <div class="col-sm-6 pt-3" style="font-style: italic; font-size: 14px;">
-            <p style="font-style: normal; font-weight: 400;">I'm currently learning:</p>
-            <p class="mb-1">AI for Designers</p>
-            <p class="mb-1">User Research Methods and Best Practices</p>
-            <p class="mb-1">Data-Driven Design: Quantitative Research for UX</p>
-            <p class="mb-1">UI Design Patterns for Successful Software</p>
-            <p class="mb-1">UX Design for Virtual Reality</p>
 
-          </div>
-        </div>
-      </div>
 
-    </div>
-  </div>
-  </div>
+
+  <!--<div class="bb"></div>-->
+
+
+
 
   <!-- Values -->
 
@@ -196,13 +168,192 @@
   </section>
 
 
-  <!-- Process -->
+  <!-- Skills Desktop-->
+
+  <section class="recent-work pt-5 mt-0 pb-2 skills-desktop">
+
+    <div class="container">
+      <div class="row center">
+        <h2 style="font-size: 60px; font-weight: 600; line-height: 64px;" class="pt-5 pb-4">Skills + Knowledge</h2>
+      </div>
+      <div class="row center pb-4">
+        <h3 style="font-size: 22px; font-weight: 500;">I have worked in Startups, Publishing, SaaS, Cannabis & Virtual Reality. These are the skills I have applied:</h3>
+      </div>
+      <div class="container center pb-2" style="font-size: 14px;">
+        <div class="row pb-4">
+          <div class="col-sm-4 pr-0 pl-0">
+            <p style="font-size: 18px; font-weight: 600;" class="pb-0 mb-0">Interaction</p>
+            <p class="pb-0 mb-0">UX/UI Principles</p>
+            <p class="pb-0 mb-0">Design Thinking</p>
+            <p class="pb-0 mb-0">Prototyping</p>
+            <p class="pb-0 mb-0">Information Architecture</p>
+            <p class="pb-0 mb-0">Usability Testing</p>
+            <p class="pb-0 mb-0">User Flows</p>
+            <p class="pb-0 mb-0">Storyboarding</p>
+            <p class="pb-0 mb-0">Wireframing</p>
+          </div>
+          <div class="col-sm-4 pr-0 pl-0">
+            <p style="font-size: 18px; font-weight: 600;" class="pb-0 mb-0">Visual</p>
+            <p class="pb-0 mb-0">Brand</p>
+            <p class="pb-0 mb-0">Web & Frontend</p>
+            <p class="pb-0 mb-0">Layout</p>
+            <p class="pb-0 mb-0">Typography</p>
+            <p class="pb-0 mb-0">Photography + Editing</p>
+            <p class="pb-0 mb-0">Video Editing</p>
+            <p class="pb-0 mb-0">Illustration</p>
+            <p class="pb-0 mb-0">Iconography</p>
+            <p class="pb-0 mb-0">Production + Preflighting</p>
+            <p class="pb-0 mb-0">Motion Graphics (learning)</p>
+          </div>
+          <div class="col-sm-4 pr-0 pl-0">
+            <p style="font-size: 18px; font-weight: 600;" class="pb-0 mb-0">Software</p>
+            <p class="pb-0 mb-0">Adobe Suite</p>
+            <p class="pb-0 mb-0">MS Suite</p>
+            <p class="pb-0 mb-0">G-Suite</p>
+            <p class="pb-0 mb-0">InVision</p>
+            <p class="pb-0 mb-0">Figma</p>
+            <p class="pb-0 mb-0">Miro</p>
+            <p class="pb-0 mb-0">Unbounce</p>
+            <p class="pb-0 mb-0">Hubspot</p>
+            <p class="pb-0 mb-0">Procreate</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 pr-0 pl-0">
+            <p style="font-size: 18px; font-weight: 600;" class="pb-0 mb-0">Coding & Web</p>
+            <p class="pb-0 mb-0">HTML</p>
+            <p class="pb-0 mb-0">CSS</p>
+            <p class="pb-0 mb-0">Javascript (learning)</p>
+            <p class="pb-0 mb-0">Bootstrap</p>
+            <p class="pb-0 mb-0">WordPress</p>
+            <p class="pb-0 mb-0">Github</p>
+          </div>
+          <div class="col-sm-4 pr-0 pl-0">
+            <p style="font-size: 18px; font-weight: 600;" class="pb-0 mb-0">Interpersonal</p>
+            <p class="pb-0 mb-0">Communication</p>
+            <p class="pb-0 mb-0">Mentoring</p>
+            <p class="pb-0 mb-0">Relationship-Building</p>
+            <p class="pb-0 mb-0">Collaboration</p>
+            <p class="pb-0 mb-0">Organization</p>
+            <p class="pb-0 mb-0">Accountability</p>
+            <p class="pb-0 mb-0">Resiliency</p>
+          </div>
+          <div class="col-sm-4 pr-0 pl-0">
+            <p style="font-size: 18px; font-weight: 600;" class="pb-0 mb-0">Descriptors</p>
+            <p class="pb-0 mb-0">Works well under pressure</p>
+            <p class="pb-0 mb-0">Highly motivated, self starter</p>
+            <p class="pb-0 mb-0">Creative problem solver</p>
+            <p class="pb-0 mb-0">Strong workflow management</p>
+            <p class="pb-0 mb-0">Adaptaptable</p>
+            <p class="pb-0 mb-0">Detail-oriented</p>
+            <p class="pb-0 mb-0">Innovative</p>
+          </div>
+        </div>
+      </div>
+      <div class="row pt-5 center">
+        <a href="testimonials.html"><h3 style="font-size: 36px; font-weight: 600; color: #8b008b;">Read what my colleagues have to say ></h3></a>
+
+      </div>
+
+  </section>
+
+  <!-- Skills Mobile -->
+
+  <section class="recent-work pt-4 mt-0 pb-5 skills-mobile">
+
+    <div class="container">
+      <div class="row center">
+        <h2 style="font-size: 22px; font-weight: 600;" class="pb-1">I have worked in Startups, Publishing, SaaS, Cannabis & Virtual Reality.</h2>
+        <a href="testimonials.html" class="btn-about"><h3 class="pr-3 pl-3 pt-2">Tap for Skills, Certs & Testimonials ></h3></a>
+      </div>
+      </div>
+  </section>
+
+
+  <!-- IxDF Desktop -->
+
+<section class="certs-desktop pt-1">
+  <div class="container pt-5 pb-4">
+    <div class="row center pb-5">
+      <div class="container pt-0">
+        <div class="pb-2">
+          <img class="ixdf-desktop w-25 pb-2 inline" src="img/ixdf.png" alt="">
+          <img class="ixdf-mobile w-50 pb-2 inline" src="img/ixdf.png" alt="">
+        </div>
+        <p style="font-weight: 600; font-size: 20px;" class="inline">Certifications</p>
+        <div class="bb"></div>
+        <div class="row pt-3">
+            <div class="col-sm-6" style="font-style: italic; font-size: 14px;">
+              <p class="mb-1">AI for Designers</p>
+              <p class="mb-1">User Research Methods and Best Practices</p>
+              <p class="mb-1">Data-Driven Design: Quantitative Research for UX</p>
+            </div>
+            <div class="col-sm-6" style="font-style: italic; font-size: 14px;">
+              <p class="mb-1">UI Design Patterns for Successful Software</p>
+              <p class="mb-1">UX Design for Virtual Reality</p>
+              <p class="mb-1">Accessibility: How to Design for All</p>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+  <!-- Hobbies Mobile-->
+
+  <section class="recent-work pt-4 mt-0 pb-4 skills-mobile">
+
+    <div class="container">
+      <div class="row center">
+        <h2 style="font-size: 60px; font-weight: 600" class="pb-4">Hobbies</h2>
+      </div>
+      <div class="row center pb-4">
+        <h4 class="font-weight-bold" style="line-height: 36px; font-size: 28px;">🐴 Horse back riding.<br> 👨‍🌾 Gardening.<br>✍️ iPad Art.<br>📷 Film photography.<br>👾 Gaming.<br>⛺ Camping.</h4>
+      </div>
+  </section>
+
+  <!-- Hobbies Desktop-->
+
+  <section class="recent-work mt-0 pb-4 skills-desktop">
+
+    <div class="container">
+      <div class="row pt-3 center">
+        <h2 style="font-size: 60px; font-weight: 600" class="pb-4">Hobbies</h2>
+      </div>
+      <div class="row center pb-4">
+        <h4 class="font-weight-bold" style="line-height: 36px; font-size: 28px;">🐴 Horse back riding. 👨‍🌾 Gardening. ✍️ iPad Art.<br>📷 Film photography. 👾 Gaming. ⛺ Camping.</h4>
+      </div>
+  </section>
+
+<!--Animals-->
+  <section class="recent-work pt-0 mt-0 pb-4 ">
+    <div class="container center">
+      <div class="row">
+        <div class="col-sm-4">
+          <img class="img-fluid" src="img/pets/lupe.jpg" alt="">
+          <p class="caption text-center pt-1">Lupé</p>
+        </div>
+        <div class="col-sm-4">
+          <img class="img-fluid" src="img/pets/noni.jpg" alt="">
+          <p class="caption text-center pt-1">Noni</p>
+        </div>
+        <div class="col-sm-4">
+          <img class="img-fluid" src="img/pets/rosa.jpg" alt="">
+          <p class="caption text-center pt-1">Rosa</p>
+        </div>
+      </div>
+  </section>
+
+
+  <!-- Process
   <div class="container pb-5 pt-5">
     <div class="center pt-0">
       <div class="row pt-5">
         <div class="col-sm-5">
           <h2 style="font-size: 60px; font-weight: 600; line-height: 60px;">My Design Process</h2>
-          <!--<h1 class="text-left font-weight-light pb-2"><span style="font-weight: 300;">My</span> <span class="intro-2" style="font-weight:800;">design</span> <span class="intro-3" style="font-weight:800;">process</span>.</h1>-->
+          <h1 class="text-left font-weight-light pb-2"><span style="font-weight: 300;">My</span> <span class="intro-2" style="font-weight:800;">design</span> <span class="intro-3" style="font-weight:800;">process</span>.</h1>
         </div>
         <div class="col-sm-7 pb-3">
           <ul class="scope-list">
@@ -213,79 +364,11 @@
             <li>Implement and Deliver</li>
             <li>Monitor Performance</li>
           </ul>
-          <!--<ol>
-              <li style="font-weight: 600; font-size: 20px;">Sync</li>
-              <p class="pb-2 mb-0"><strong>Review Objectives, Scope, Requirements</strong></p>
-              <p>I ask lots of questions during this stage and gather as much information as possible. I like to ensure everyone is on the same page prior to ideation. </p>
-              <li style="font-weight: 600; font-size: 20px;">Research and Ideate</li>
-              <p class="pb-2 mb-0"><strong>Brainstorm, Document, Conceptualize</strong></p>
-              <p>This is where the creative juices start flowing. I like to touch base post-ideation with the creative director/manager to ensure the work is on track before getting into the heavier lifting.</p>
-              <li style="font-weight: 600; font-size: 20px;">Design</li>
-              <p class="pb-2 mb-0"><strong>Wireframes, Mock Ups, Preliminary Designs</strong></p>
-              <p>I begin to realize ideas and concepts by translating them into initial designs.</p>
-              <li style="font-weight: 600; font-size: 20px;">Share</li>
-              <p class="pb-2 mb-0"><strong>Present, Review and Revise, Iterate</strong></p>
-              <p>Iterate between stages 3 & 4 integrating feedback, revisions and communication with project stakeholders.</p>
-              <li style="font-weight: 600; font-size: 20px;">Deliver & Implement</li>
-              <p>I extend my design process beyond completion and launch, actively reviewing work performance using metrics and research to refine strategies for better engagement with target audiences.</p>
-              <p class="pb-2 mb-0"><strong>Collect Performance Data</strong></p>
-            </ol>-->
         </div>
       </div>
 
     </div>
-  </div>
-
-
-  <!-- Testimonials & Peer Feedback -->
-
-
-  <section class="recent-work pb-2" style="background-color: #fffdf2;">
-
-    <div class="container">
-      <div class="row pt-3 center">
-        <h2 style="font-size: 60px; font-weight: 600; line-height: 60px;" class="pt-5 pb-4">Recent Peer Feedback</h2>
-        <div class="pb-4">
-          <p class="caption">This peer feedback is from anonymous colleagues at Euna Solutions, January 2024.</p>
-          <p class="pb-3"><span style="font-weight: 500;">Hannah has done an amazing job on design tasks for programs.</span> <br>She has strong project management skills and works together with programs managers on timelines to ensure we stay on track. She is detail-oriented
-            and the quality of her work is consistently excellent. I've loved the work she's put into each design concept. During kick-off calls, Hannah's asks great questions to streamline workflows and ensure that she gathers all project information
-            to ensure a successful outcome. She's also always a pleasure to work with.</p>
-          <p class="pb-3"><span style="font-weight: 500;">Hannah is awesome at what she does.</span> She is incredibly responsive, whether it's answering questions or working on last minute requests. Her eye for detail is another major strength, catching the small things
-            many overlook and making sure everything is perfect. She is very innovative, and her creativity makes our projects shine, setting us apart from the competition. Lastly, she consistently meets deadlines, often submitting tasks ahead of schedule.</p>
-          <p class="pb-3"><span style="font-weight: 500;">Hannah is so talented.</span> Often times I would give her incredibly vague instructions, and yet somehow she would create exactly what I wanted! She's incredibly organized as well, and always on the ball with
-            what is needed, and she sets good timelines. She also set a lot of reminders in ClickUp which was great. She's also really fun to work with.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="recent-work pt-5 pb-4">
-
-    <div class="container">
-      <div class="row pt-3 center">
-        <h2 style="font-size: 60px; font-weight: 600" class="pt-5 pb-4">Testimonials</h2>
-        <div class="pb-4">
-          <p><span style="font-weight: 500;">In 2021 Hannah has made a substantial contribution to the Marketing and Communications team.</span> Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time
-            that I have, I have felt and seen her impact. I continue to be impressed by the work that she produces. Her attention to detail and the time she takes to inform her decisions shows her commitment to her work. Hannah has a positive attitude
-            and willingness to taking on new initiatives, she is someone I trust and can rely on.</p>
-          <p>Hannah has a genuine enthusiasm in her work and is very invested in contributing to our company’s success. Her dedication to her work, and creative vision makes Hannah a valuable contributor to the team.</p>
-          <br>
-          <p class="text-right font-weight-bold pb-0 mb-0">—Kristina Henrikson</p>
-          <p class="text-right caption">Manager, Marketing and Communications at Canadian Science Publishing</p>
-        </div>
-        <div class="pb-4 pt-5">
-          <p style="font-weight: 500;">It’s my pleasure to recommend my former Lead Graphic Designer, Hannah Hatherell.</p>
-          <p>Hannah worked for me as the lead Graphic Designer at Coyle Media Group for a year. During that time, I was impressed by her overall performance, particularly in her knowledge of InDesign, Illustrator, photoshop and WordPress. Hannah consistently
-            worked hard to achieve Result for our team, she was assigned with the task of designing multiple high-end magazines along with websites, print ads, digital ads and some photography.</p>
-          <p>Hannah is a reliable and talented Graphic Designer and a joy to work with who doesn’t hesitate to help her co-workers. She is an excellent communicator and a pleasure to work with. I’m confident Hannah will be a great asset to your team, just
-            as she was to ours.</p>
-          <br>
-          <p class="text-right font-weight-bold pb-0 mb-0">—Jon Hudon</p>
-          <p class="text-right pb-2 caption">Media Design Manager at Coyle Media Group</p>
-        </div>
-      </div>
-    </div>
-  </section>
+  </div>-->
 
 
   <!-- More -->
