--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <section class="pt-5 mt-5 pb-4">
     <div class="container center">
       <div>
-        <h1 class="pl-5 pr-5 pt-4 text-center" style="line-height: 32px; font-size: 26px; font-weight: 500;">Hi, I'm Hannah 👋 an experienced designer with a marketing background, who enjoys solving complex problems with design solutions.</h1>
+        <h1 class="pl-5 pr-5 pt-4 text-center" style="line-height: 32px; font-size: 26px; font-weight: 500;">Hi, I'm Hannah 👋 an experienced designer with creative and technical expertise. I enjoy solving complex problems with design solutions.</h1>
         <!--<h1 class="pl-5 pr-5 text-center pt-4" style="line-height: 26px; font-size: 27px; font-weight: 300;">Hi, I'm Hannah 👋</h1>
         <h1 class="text-center pl-4 pr-4" style="line-height: 26px; font-size: 24px; font-weight: 200;">I’m an experienced designer with a marketing background, who enjoys solving complex problems with design solutions.</h1>-->
         <!--<div class="text-center ixdf-mobile">
@@ -154,7 +154,7 @@
         <a class="d-block mx-auto mb-4" href="nng.html">
         <img class="img-fluid project" src="img/nng-1.png">
       </a>
-        <p class="project-sub">Visual System. Design Thinking.</p>
+        <p class="project-sub">Book Cover. Visual System. Design Thinking.</p>
         <h5 class="project-title">Nielsen Norman Group</h5>
       </div>
     </div>
