--- a/questica.html
+++ b/questica.html
@@ -206,7 +206,7 @@
           <div class="pb-4">
             <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
           </div>
-          <p class="project-sub">Visual System. Design Thinking.</p>
+          <p class="project-sub">Book Cover. Visual System. Design Thinking.</p>
           <h5 class="project-title">Nielsen Norman Group</h5>
         </div>
       </div>
