--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
+              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -192,17 +192,17 @@
       <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="hhi.html">
-          <img class="img-fluid project hhi-border" src="img/hhi-1.png">
+          <img class="img-fluid project" src="img/hhi.gif">
         </a>
         <p class="project-sub">Artwork. Brand. Passion Project.</p>
         <h5 class="project-title">Half Halt Illustrations</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="various.html">
-          <img class="img-fluid project" src="img/various-1.png">
+          <img class="img-fluid project" src="img/fun-stuff.gif">
         </a>
-        <p class="project-sub">Code. Design. Illustration.</p>
-        <h5 class="project-title">Various Works</h5>
+        <p class="project-sub">Code. Motion. Design. Illustration.</p>
+        <h5 class="project-title">Fun Stuff</h5>
       </div>
     </div>
   </div>
