--- a/various.html
+++ b/various.html
@@ -62,7 +62,7 @@
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
-              <a class="dropdown-item nav-item" href="various.html">Various Works</a>
+              <a class="dropdown-item nav-item" href="various.html">Fun Stuff</a>
             </div>
           </div>
           <li class="nav-item mx-0 mx-lg-1">
@@ -78,19 +78,24 @@
     </div>
   </nav>
 
-
   <div class="text-center pt-5 mt-5">
-    <h1 style="font-size: 96px; font-weight: 600" class="pt-3">Various Works</h2>
+    <h1 style="font-size: 96px; font-weight: 600" class="pt-3">Fun Stuff</h2>
   </div>
 
 <div class="bb pt-2 w-25"></div>
 
-  <section class="mx-auto pt-3 mt-2 pb-5">
-            <div class="text-center">
-              <h2 style="font-size: 28px; font-weight: 600" class="pt-3">CSS Animations</h2>
-            </div>
+<!-- RGB Animation -->
+<section class="mx-auto pb-5">
+  <h2 style="font-size: 28px; font-weight: 600" class="pt-3 text-center">RGB Motion Exploration</h2>
+  <div class="col-sm-6 mx-auto pt-2">
+    <img class="img-fluid" src="img/various/rgb.gif" alt="">
+      </div>
+  </section>
 
-    <div class="col-lg-8 mx-auto pt-4">
+<!--CSS Animations-->
+  <section class="mx-auto pt-5 pb-5">
+    <h2 style="font-size: 28px; font-weight: 600" class="pt-5 text-center">CSS Animations</h2>
+    <div class="col-lg-8 mx-auto pt-1 pb-0">
       <video class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
             <source src="img/planets.mov" type="video/mp4">
           </video>
@@ -102,12 +107,33 @@
       </video>
     </div>
 
-      <p class="text-center">CSS animations | Source code <a class="link" href="https://codepen.io/hath0013/pen/VPPagm" target="blank">here</a>.</p>
-
+      <p class="text-center" style="font-weight: 600;"><a class="link" href="https://codepen.io/hath0013/pen/VPPagm" target="blank">See the source code here on CodePen.</a></p>
     </section>
 
-    <div class="bb pt-2 pb-3"></div>
+<div class="bb pt-0"></div>
 
+    <!-- Iconography -->
+    <section class="mx-auto pt-5 pb-5">
+      <h2 style="font-size: 28px; font-weight: 600" class="pt-3 pb-3 text-center">Iconography</h2>
+      <div class="container center">
+        <div class="row pl-5 pr-5">
+        <div class="col-sm-6 pl-0 pr-0">
+          <img class="img-fluid" src="img/various/icon-1.jpg" alt="">
+        </div>
+        <div class="col-sm-6 pl-0 pr-0">
+          <img class="img-fluid" src="img/various/icon-2.jpg" alt="">
+        </div>
+        <div class="col-sm-6 pl-0 pr-0">
+          <img class="img-fluid" src="img/various/icon-3.jpg" alt="">
+        </div>
+        <div class="col-sm-6 pl-0 pr-0">
+          <img class="img-fluid" src="img/various/icon-4.jpg" alt="">
+        </div>
+      </div>
+      </div>
+      </section>
+
+<!-- School Days -->
     <div class="text-center pt-5">
       <h2 style="font-size: 28px; font-weight: 600" class="pt-3">School Days</h2>
     </div>
@@ -128,28 +154,15 @@
 
           <div class="col-lg-8 mx-auto pt-4">
             <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
-                  <source src="img/icons.mov" type="video/mp4">
+                  <source src="img/various/origami.mov" type="video/mp4">
                 </video>
             <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
-                  <source src="img/icons.mov" type="video/mp4">
+                  <source src="img/various/origami.mov" type="video/mp4">
                 </video>
             <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay controls>
-                  <source src="img/icons.mov" type="video/mp4">
+                  <source src="img/various/origami.mov" type="video/mp4">
                 </video>
               </div>
-
-              <div class="col-lg-8 mx-auto pt-4">
-                <video muted class="vimeo-lg" style="width: 640px; height: 360px"loop autoplay>
-                      <source src="img/cmn-ad.mov" type="video/mp4">
-                    </video>
-                <video muted class="vimeo-md" style="width: 540px; height: 260px"loop autoplay>
-                      <source src="img/cmn-ad.mov" type="video/mp4">
-                    </video>
-                <video muted class="vimeo-sm" style="width: 275px; height: 160px"loop autoplay controls>
-                      <source src="img/cmn-ad.mov" type="video/mp4">
-                    </video>
-                  </div>
-
 
       </section>
 
@@ -159,7 +172,7 @@
     <!--<section class="banner-harper text-center"></section>-->
 
     <div class="text-center pt-5">
-      <h2 style="font-size: 28px; font-weight: 600" class="pt-3">Red Panda</h2>
+      <h2 style="font-size: 28px; font-weight: 600" class="pt-5">Red Panda</h2>
     </div>
   </div>
 
