--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="row pt-4">
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="euna.html">
-        <img class="img-fluid project" src="img/euna.gif">
+        <img class="img-fluid project" src="img/euna-1.gif">
       </a>
         <p class="project-sub">Design. Creative. Brand.</p>
         <h5 class="project-title">Euna Solutions</h5>
@@ -169,7 +169,7 @@
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
-        <img class="img-fluid project" src="img/mpvr.gif">
+        <img class="img-fluid project" src="img/mpvr-1.gif">
       </a>
         <p class="project-sub">UX. UI. Virtual Reality.</p>
         <h5 class="project-title">MasterpieceVR</h5>
