--- a/csp.html
+++ b/csp.html
@@ -111,16 +111,26 @@
         <p>After CSP rebranded, they needed a design solution to promote their new identity to current and potential institutions. In addition, they needed a reliable system to gather data and measure performance. The goal of this project was to research and implement a design solution that enabled marketing to promote CSP’s brand identity, track campaign performance and use that data to inform future sales and marketing decisions.</p>
         <p style="font-weight: 600;">My key contributions to Canadian Science Publishing:</p>
         <ul>
-          <li class="pb-3"><span class="font-weight-bold">Implemented a design process.</span> This helped the team establish structure.</li>
-          <li class="pb-3"><span class="font-weight-bold">Established a design system.</span> This helped Operations and Sales understand how and why the team chooses to implement certain components over others.</li>
+          <li class="pb-3"><span class="font-weight-bold">Led scientific journal cover selection and production.</span> Communication with SPEs, MEs journal editors was key in this process.</li>
+          <li class="pb-3"><span class="font-weight-bold">Implemented a design & system process.</span> This helped the team establish structure and helped Operations and Sales understand how and why the team chooses to implement certain components over others.</li>
           <li class="pb-3"><span class="font-weight-bold">Initiated usability testing of sales and marketing tools.</span> Since no usability tests were previously conducted, we started conducting testing and used the feedback to either improve or replace our current tools.</li>
           <li class="pb-3"><span class="font-weight-bold">Implemented tools with built-in metrics.</span> This gave the team a way to measure success and inform data-driven decisions.</li>
           <li class="pb-3"><span class="font-weight-bold">Improved brand and visual presence across all channels.</span> There was little to no brand presence when I came on board, librarians and agents have become aware of CSP since starting promotional campaigns.</li>
         </ul>
+        <p style="font-weight: 600;">A few of the journal covers I curated:</p>
+      </div>
+      <div class="row pb-4 pr-1 pl-1">
+        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/as.jpg" alt="">
+        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjc.jpg" alt="">
+        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjfas.jpg" alt="">
+        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjfr.jpg" alt="">
+        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjm.jpg" alt="">
+        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjp.jpg" alt="">
+        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/dsa.jpg" alt="">
+        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/genome.jpg" alt="">
       </div>
       <div>
-        <h2 style="font-size: 20px; font-weight: 600">Understanding the Problem</h2>
-        <p>When I joined the team, there was no solution in place for marketing to measure performance metrics of sales-specific campaigns. As a result, there was no way for marketing to know if these campaigns were successful. This caused a gap between marketing and sales because marketing could not report on current and past campaigns or inform future campaigns using quantitative data. It also meant that marketing could not support sales to its fullest extent.</p>
+        <p>When I joined CSP, there was no solution in place for marketing to measure performance metrics of sales-specific campaigns. As a result, there was no way for marketing to know if these campaigns were successful. This caused a gap between marketing and sales because marketing could not report on current and past campaigns or inform future campaigns using quantitative data. It also meant that marketing could not support sales to its fullest extent.</p>
         <p>My research encompassed:</p>
         <ul>
           <li>Understanding the user goals and needs</li>
