edits to motion graphics

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="nng.html">
-        <img class="img-fluid project" src="img/nng-1.png">
+        <img class="img-fluid project" src="img/nng.gif">
       </a>
         <p class="project-sub">Book Cover. Visual System. Design Thinking.</p>
         <h5 class="project-title">Nielsen Norman Group</h5>
