--- a/various.html
+++ b/various.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:title" content="Various Projects" />
+  <meta property="og:title" content="Fun Stuff" />
   <meta property="og:url" content="https://www.hannahhatherell.com/various.html" />
   <meta property="og:image" content="https://www.hannahhatherell.com/various-1.png" />
 
