csp page update

--- a/csp.html
+++ b/csp.html
@@ -104,11 +104,11 @@
   <section class="pt-5 mt-3">
     <div class="container center pb-4 mt-5">
       <div class="pb-2">
-        <h2 style="font-size: 20px; font-weight: 600">Canadian Science Publishing (Not-for-Profit)</h2>
+        <img class="w-25 col-sm-2 pl-0 pr-0" src="img/csp/logo.png" alt="">
+        <h2 style="font-size: 20px; font-weight: 600">Canadian Science Publishing</h2>
       </div>
       <div>
         <p>Canadian Science Publishing (CSP) is an Ottawa-based not-for-profit scholarly publisher that provides access to their suite of scientific journals through paid and open access subscriptions.</p>
-        <p>After CSP rebranded, they needed a design solution to promote their new identity to current and potential institutions. In addition, they needed a reliable system to gather data and measure performance. The goal of this project was to research and implement a design solution that enabled marketing to promote CSP’s brand identity, track campaign performance and use that data to inform future sales and marketing decisions.</p>
         <p style="font-weight: 600;">My key contributions to Canadian Science Publishing:</p>
         <ul>
           <li class="pb-3"><span class="font-weight-bold">Led scientific journal cover selection and production.</span> Communication with SPEs, MEs journal editors was key in this process.</li>
@@ -117,19 +117,7 @@
           <li class="pb-3"><span class="font-weight-bold">Implemented tools with built-in metrics.</span> This gave the team a way to measure success and inform data-driven decisions.</li>
           <li class="pb-3"><span class="font-weight-bold">Improved brand and visual presence across all channels.</span> There was little to no brand presence when I came on board, librarians and agents have become aware of CSP since starting promotional campaigns.</li>
         </ul>
-        <p style="font-weight: 600;">A few of the journal covers I curated:</p>
-      </div>
-      <div class="row pb-4 pr-1 pl-1">
-        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/as.jpg" alt="">
-        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjc.jpg" alt="">
-        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjfas.jpg" alt="">
-        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjfr.jpg" alt="">
-        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjm.jpg" alt="">
-        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/cjp.jpg" alt="">
-        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/dsa.jpg" alt="">
-        <img class="col-sm-3 pb-4  img fluid" src="img/csp/covers/genome.jpg" alt="">
-      </div>
-      <div>
+      <!--<div>
         <p>When I joined CSP, there was no solution in place for marketing to measure performance metrics of sales-specific campaigns. As a result, there was no way for marketing to know if these campaigns were successful. This caused a gap between marketing and sales because marketing could not report on current and past campaigns or inform future campaigns using quantitative data. It also meant that marketing could not support sales to its fullest extent.</p>
         <p>My research encompassed:</p>
         <ul>
@@ -137,12 +125,12 @@
           <li>Uncovering pain points with the existing user journeys</li>
           <li>Methods to determine the success of the tasks measured</li>
         </ul>
-      </div>
+      </div>-->
     </div>
   </section>
 
 
-  <section class="pb-1">
+  <!--<section class="pb-1">
     <div class="container center">
       <div class="pb-2">
         <h2 style="font-size: 20px; font-weight: 600">Gathering Insights</h2>
@@ -174,12 +162,42 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
+<section class="pb-5">
+  <div class="container">
+    <img class="img-fluid" src="img/csp/csp-1.jpg" alt="">
+          <p class="center pb-5 pt-5"><span style="font-weight: 600;">Top left:</span> Inner spread example of the sales catalogue layout. <span style="font-weight: 600;">Top center:</span> Social Media Promotional Graphic. <span style="font-weight: 600;">Top right:</span> Cover for CSP's Open Access Roadmap. <span style="font-weight: 600;">Bottom center:</span> Call for Papers template design. <span style="font-weight: 600;">Bottom right:</span> Journal Catalogue landing page.</p>
+  </div>
 
-  <section>
+  <div class="container">
+    <img class="img-fluid" src="img/csp/csp-2.jpg" alt="">
+    <p class="center pb-5 pt-5">CSP hosted an annual image contest called <em>Visualizing Science</em> to support researchers and feature their images on journal covers. I created a sub-brand specific to the contest and redesigned the image submission platform (above). <br><br>Below is a selection from the 20+ journal covers I curated on an annual basis.</p>
+  <div class="container pr-0 pl-0">
+    <img class="img-fluid" src="img/csp/csp-3.jpg" alt="">
+  </div>
+</section>
+
+<section>
+  <div class="container pt-5 pb-5">
+    <div class="row center pt-3 pr-0 pl-0" style="font-size: 12px;">
+      <div class="col-sm-4 pb-5">
+        <img class="img-fluid" src="img/csp/csp-sub.png">
+      </div>
+      <div class="col-sm-4 pb-5">
+        <img class="img-fluid" src="img/csp/csp-access.png">
+      </div>
+      <div class="col-sm-4 pb-5">
+        <img class="img-fluid" src="img/csp/csp-oa.png">
+      </div>
+    </div>
+    <p class="center text-center caption pb-5 pt-1">Custom illustrations created to elevate visual identity and selling points.</p>
+  </div>
+</section>
+
+  <!--<section>
     <div class="container center">
-      <h2 style="font-size: 20px; font-weight: 600">Targeted Illustrations</h2>
+      <p style="font-weight: 600;">Custom Illustrations</p>
       <div class="row pb-4">
         <div class="col-6">
           <img class="img-fluid" src="img/csp/wb-1.jpg">
@@ -188,7 +206,7 @@
           <img class="img-fluid" src="img/csp/wb-2.jpg">
         </div>
       </div>
-      <p>To achieve visuals that elevated CSP's new brand identity, I used wordmapping and whiteboarding. This process helped me determine which of the key words in each selling point copy to address in the corresponding visual.</p>
+      <p>Custom illustrations were created to elevate CSP's visual identity and target selling points.</p>
       <div class="row pt-3 text-center" style="font-size: 12px;">
         <div class="col-4">
           <img class="img-fluid pb-1" src="img/csp/csp-sub.png">
@@ -205,10 +223,10 @@
       </div>
     </div>
     </div>
-  </section>
+  </section>-->
 
 
-  <section>
+  <!--<section>
     <div class="container center pb-5 pt-3">
       <div class="pb-2">
         <h2 style="font-size: 20px; font-weight: 600">Wireframing the Solution</h2>
@@ -234,9 +252,9 @@
       </div>
     </div>
   </div>
-</section>
+</section>-->
 
-  <section class="pt-5">
+  <!--<section class="pt-5">
     <div class="container center">
       <div class="pb-5">
         <h2 style="font-size: 20px; font-weight: 600">Results and Takeaways</h2>
@@ -252,17 +270,15 @@
         <a class="d-inline" href="https://www.flipsnack.com/cdnsciencepub/2022-journals-catalogue/full-view.html" target="_blank"><button type="button" class="btn btn-primary font-weight-light">See the Digital Flipbook</button></a>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="pb-4">
       <ul class="scope-list center">
-        <li>Communication</li>
-        <li>User Research</li>
-        <li>User Experience</li>
-        <li>Whiteboarding</li>
-        <li>Wireframing</li>
-        <li>Prototyping</li>
+        <li>Print Design</li>
+        <li>Preflighting</li>
+        <li>Digital Design</li>
         <li>Illustration</li>
+        <li>User Experience</li>
         <li>Frontend</li>
       </ul>
   </section>
