--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <a class="d-block mx-auto mb-4" href="csp.html">
         <img class="img-fluid project" src="img/csp-1.png">
       </a>
-        <p class="project-sub">UX. Frontend. Illustration.</p>
+        <p class="project-sub">Brand. Frontend. Illustration.</p>
         <h5 class="project-title">Canadian Science Publishing</h5>
       </div>
       <div class="col-sm-6">
